--- a/index.html
+++ b/index.html
@@ -1069,12 +1069,23 @@
                         </span>
                     </p> -->
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[55] Z. Li, Z. Gao and T. Li, "Sensing User's Channel and Location with Terahertz
+                            Extra-Large Reconfigurable Intelligent Surface under Hybrid-Field Beam Squint Effect,"
+                            accepted by IEEE J. Sel. Top. Sign. Proces, 2023.
+                            [<a href="https://arxiv.org/abs/2305.07184" target="_blank">arXiv</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/10130575" target="_blank">IEEE URL</a>]
+                            [<a href="https://github.com/LiZhuoRan0" target="_blank">Codes</a>]
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[54] K. Ying, Zhen Gao, Sheng Chen, Mingyu Zhou, Dezhi Zheng, Symeon Chatzinotas, Björn
                             Ottersten, and H. Vincent Poor, “Quasi-Synchronous Random Access for Massive MIMO-Based LEO
                             Satellite Constellations,”accepted by IEEE J. Sel. Areas Commun., 2023.
                             [<a href="https://arxiv.org/abs/2304.04484" target="_blank">arXiv</a>]
                         </span>
                     </p>
+
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[53] Yikun Mei, Zhen Gao, De Mi, Mingyu Zhou, Dezhi Zheng, Michail Matthaiou, Pei Xiao,
                             Robert Schober, "Massive Access in Extra Large-Scale MIMO With Mixed-ADC Over Near-Field
@@ -1855,6 +1866,29 @@
                     <font style="font-size: 18px;">Conferences</font>
                 </b>: </p>
             <font size="3">
+                <ul>
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[31] M. Wu, Z. Wan, Y. Wang, S. Liu and Z. Gao, "Deep Learning-Based Rate-Splitting
+                            Multiple Access for Massive MIMO-OFDM Systems With Imperfect CSIT," 2022 International
+                            Symposium on Wireless Communication Systems (ISWCS), Hangzhou, China, 2022, pp. 1-6.
+                            [<a href="https://ieeexplore.ieee.org/document/9940255" target="_blank">URL</a>]
+                            <!-- [<a href="./Files/IWCMC_Slides/kmlSlides.pdf" target="_blank">Slides</a>] -->
+                        </span>
+                    </p>
+                </ul>
+
+                <ul>
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[30] M. Wu, Z. Gao, Z. Gao, D. Wu, Y. Yang and Y. Huang, "Deep Learning-Based Hybrid
+                            Precoding for FDD Massive MIMO-OFDM Systems with a Limited Pilot and Feedback Overhead,"
+                            2022 IEEE International Conference on Communications Workshops (ICC Workshops), Seoul,
+                            Korea, Republic of, 2022, pp. 318-323.
+                            [<a href="https://ieeexplore.ieee.org/document/9814463" target="_blank">URL</a>]
+                            <!-- [<a href="./Files/IWCMC_Slides/kmlSlides.pdf" target="_blank">Slides</a>] -->
+                        </span>
+                    </p>
+                </ul>
+
                 <ul>
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[29] Z. Li, Z. Wan, K. Ying, Y. Mei, M. Ke and Z. Gao, "Reconfigurable Intelligent Surface
