--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
             <ul id="latestnews">
                 <li> <b>
                         <font color="#FF0000">[2023.05]</font>
+                    </b> Paper of Ziwei Wan was awarded Best Student Paper, EAI WiSATS 2022 (万子维论文被国际学术会议EAI WiSATS
+                    2022评为最佳学生论文奖)
+                </li>
+
+                <li> <b>
+                        <font color="#FF0000">[2023.05]</font>
                     </b> Paper of Zhuoran Li was accecpted by IEEE JSTSP (李卓然论文被IEEE JSTSP
                     (IF=7.70)期刊录用)【混合场波束偏移效应下的信道估计与定位】
                 </li>
