--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
             </A>
             <ul id="latestnews">
                 <li> <b>
+                        <font color="#FF0000">[2023.06]</font>
+                    </b> Xingyu Zhou joined Qualcomm as an intern (周星宇获得高通公司实习岗位)
+                </li>
+
+                <li> <b>
                         <font color="#FF0000">[2023.05]</font>
                     </b> Paper of Ziwei Wan was awarded Best Student Paper, EAI WiSATS 2022 (万子维论文被国际学术会议EAI WiSATS
                     2022评为最佳学生论文奖)
