--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <td align="left">
                         <p>
                             <a href="./">
-                                <i class="fa fa-graduation-cap" aria-hidden="true"></i>&nbsp;&nbsp;
+                                <i class="fa fa-graduation-cap" aria-hidden="true"></i>
                                 <font size="4">Dr. Zhen Gao (</font>
                                 <font size="4" ; font style="font-family:Microsoft YaHei">高 镇</font>
                                 <font size="4">)</font>
@@ -60,7 +60,7 @@
                                 <A HREF="#Patents">Patents</A> |
                                 <A HREF="#Services">Services</A> |
                                 <A HREF="#Awards">Awards</A> |
-                                <A HREF="#Statistics">Statistics</A> |
+                                <A HREF="#Statistics">Statistics</A>
                                 <br />
                                 <br /> Email: <a href=mailto:gaozhen16@bit.edu.cn>gaozhen16@bit.edu.cn</a> (prior);
                                 &nbsp;&nbsp;&nbsp;&nbsp;
@@ -1085,7 +1085,7 @@
                             accepted by IEEE J. Sel. Top. Sign. Proces, 2023.
                             [<a href="https://arxiv.org/abs/2305.07184" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/10130575" target="_blank">IEEE URL</a>]
-                            [<a href="https://github.com/LiZhuoRan0" target="_blank">Codes</a>]
+                            [<a href="https://github.com/LiZhuoRan0" target="_blank"><font color="#FF0000">Codes</font></a>]
                         </span>
                     </p>
 
@@ -1190,7 +1190,7 @@
                             Massive MIMO", accepted by IEEE Journal on Selected Areas in Communications
                             [<a href="https://arxiv.org/abs/2209.08456" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/10032139" target="_blank">IEEE URL</a>]
-                            [<a href="https://github.com/wuminghui123/DL_RSMA" target="_blank">Codes</a>]
+                            [<a href="https://github.com/wuminghui123/DL_RSMA" target="_blank"><font color="#FF0000">Codes</font></a>]
                         </span>
                     </p>
 
@@ -1232,7 +1232,7 @@
                             1745-1762, March 2023.
                             [<a href="https://arxiv.org/pdf/2201.05766.pdf" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/9898900/" target="_blank">IEEE URL</a>]
-                            [<a href="https://github.com/JOINTwzw/Z.-Wan-TWC-2022.git" target="_blank">Codes</a>]
+                            [<a href="https://github.com/JOINTwzw/Z.-Wan-TWC-2022.git" target="_blank"><font color="#FF0000">Codes</font></a>]
                         </span>
                     </p>
 
@@ -1269,7 +1269,7 @@
                             pp. 2894-2913, Oct. 2022, doi: 10.1109/JSAC.2022.3196064.
                             (<b>SCI Q1 Top, IF=9.619</b>)
                             [<a href="https://arxiv.org/abs/2201.06778" target="_blank">arXiv</a>]
-                            [<a href="https://github.com/wuminghui123/D3L-HB" target="_blank">Codes</a>]
+                            [<a href="https://github.com/wuminghui123/D3L-HB" target="_blank"><font color="#FF0000">Codes</font></a>]
                             [<a href="https://ieeexplore.ieee.org/document/9849060/" target="_blank">IEEE URL</a>]
                         </span>
                     </p>
@@ -1340,7 +1340,7 @@
                             10.1109/TWC.2021.3107576.
                             (<i>Pre-Print</i>)
                             [<a href="https://arxiv.org/abs/2011.07928" target="_blank">arXiv</a>]
-                            [<a href="https://github.com/gaozhen16/y.mei-twc21" target="_blank">Codes</a>]
+                            [<a href="https://github.com/gaozhen16/y.mei-twc21" target="_blank"><font color="#FF0000">Codes</font></a>]
                             [<a href="https://ieeexplore.ieee.org/document/9527086" target="_blank">IEEE URL</a>]
                         </span>
                     </p>
@@ -1419,7 +1419,7 @@
                             [<a href="https://arxiv.org/abs/2104.03874" target="_blank">URL</a>]
                             [<a href="./Files/ql_slides_imnoma.pdf" target="_blank">Slides</a>]
                             [<a href="https://github.com/gaozhen16/Source-Code-L.Qiao/tree/main/TWC21"
-                                target="_blank">Codes</a>]
+                                target="_blank"><font color="#FF0000">Codes</font></a>]
                         </span>
 
                     </p>
@@ -1451,7 +1451,7 @@
                             (<b>SCI Q1 Top, IF=11.42</b>)
                             [<a href="https://ieeexplore.ieee.org/document/9452036" target="_blank">URL</a>]
                             [<a href="https://github.com/scliubit/Model-Driven-Hybrid-Channel-Estimation"
-                                target="_blank">Codes</a>]
+                                target="_blank"><font color="#FF0000">Codes</font></a>]
                         </span>
 
                     </p>
@@ -1485,7 +1485,7 @@
                             vol. 39, no. 6, pp. 1741-1767, June 2021.
                             (<b>SCI Q1 Top, IF=11.42</b>)
                             [<a href="https://ieeexplore.ieee.org/document/9398858" target="_blank">URL</a>]
-                            [<a href="https://github.com/gaozhen16/a.liao-jsac21" target="_blank">Codes</a>]
+                            [<a href="https://github.com/gaozhen16/a.liao-jsac21" target="_blank"><font color="#FF0000">Codes</font></a>]
                         </span>
 
                     </p>
@@ -2462,7 +2462,7 @@
                     <h2><i class="fa fa-bug" aria-hidden="true"></i>&nbsp;&nbsp;Report</h2>
                 </A>
                 <br />
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href=mailto:scliubit@163.com>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href=mailto:scliu@ieee.org>
                     <font color="#99a2aa">Click here for a bug report</font>
                 </a>
 
